@@ -12,6 +12,7 @@ Version 1.1.8 work in progress
 - Bug #2292: Fixed the bug that CActiveDataProvider may ignore the specified criteria for the sorting configuration (Qiang)
 - Bug #2294: Fixed the bug that duplicated PK columns may appear in the join SQL statement if custom select option is used (Qiang)
 - Bug #2303: Fixed not logging anything on WSDL service failure (Sam Dark)
+- Bug: CMapIterator current key wasn't initialized properly (Sam Dark, Detonator)
 - Enh #2262: Added warning log when a session fails to start by CHttpSession (Qiang)
 - Enh #2268: Added CClientScript::getPackageBaseUrl() (Qiang)
 - Enh #2273: Used better merging algorithm to build query parameters that are of array type in CUrlManager (Qiang)
